# onnx-text

./: .gitignore  .readthedocs.yaml  README.md  pdm_build.py  pyproject.toml
.github/workflows/: ci.yml
doc/: conf.py  index.rst
onnx_text/: __init__.py  __main__.py  _driver.py  _parser.py  constants.py
onnxbuilder/: __init__.py  __main__.py  _backend.py  _frontend.py
tests/: test_backend.py  test_frontend.py  test_lib.py  test_onnx.py  test_treesitter.py
tests/cases/func/: attr.otxt  attr.pbtxt  noattr.otxt  noattr.pbtxt
tests/cases/model/: add.otxt  add.pbtxt  attr.otxt  attr.pbtxt  comment.otxt  comment.pbtxt  constant.otxt  constant.pbtxt  empty.otxt  empty.pbtxt  function.otxt  function.pbtxt  include.otxt  include.pbtxt  inline_tensor.otxt  inline_tensor.pbtxt  input_none.otxt  input_none.pbtxt  nested.otxt  nested.pbtxt  other_data.otxt  other_data.pbtxt  subgraph.otxt  subgraph.pbtxt  typed_output.otxt  typed_output.pbtxt
tree-sitter-onnx-text/: grammar.js  package.json
tree-sitter-onnx-text/queries/: highlights.scm  locals.scm
tree-sitter-onnx-text/src/: parser.c
tree-sitter-onnx-text/test/corpus/: function.txt  graph.txt  model.txt  statement.txt
