[project]
name = "onnx-text"
description = "Text Format for Building ONNX Models"
authors = [
    {name = "Regen"},
]
dependencies = [
    "onnx>=1.13.1",
    "tree-sitter>=0.20.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
keywords = ["onnx"]
classifiers = [
    "Development Status :: 3 - Alpha", "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
]
dynamic = ["version"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "scm"
write_to = "onnx_text/_version.py"
write_template = "__version__ = '{}'"

[tool.pdm.build]
source-includes = ["tree-sitter-onnx-text/src/parser.c"]
is-purelib = false

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.2.2",
    "types-tree-sitter>=0.20.1.2",
]
lint = [
    "isort>=5.12.0",
    "black>=23.1.0",
    "flake8>=6.0.0",
    "mypy>=1.1.1",
]
doc = [
    "sphinx>=5.3.0",
    "sphinx-rtd-theme>=1.1.1",
]

[tool.pdm.scripts]
doc = {shell = "sphinx-apidoc -fo doc onnxbuilder && sphinx-build doc doc/_build"}
test = "pytest -sv tests"

[tool.pdm.scripts.lint]
shell = """
    isort --check onnx_text tests
    black --check onnx_text tests
    flake8 onnx_text tests
    mypy onnx_text tests
"""
